[tool.poetry]
name = "elyby-api"
version = "0.1.0-dev"
description = ""
authors = ["TheMade4"]
license = "GPL-3.0 license"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"
pydantic = "2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
